--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -41,9 +41,9 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install -e ".[all_extras,test]"
-          python -m pip install -r docs/requirements.txt
+          python -m pip install --no-cache-dir --upgrade pip
+          python -m pip install --no-cache-dir -e ".[all_extras,test]"
+          python -m pip install --no-cache-dir -r docs/requirements.txt
 
       - name: Show dependencies
         run: python -m pip list
@@ -67,9 +67,9 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install -e ".[all_extras]"
-          python -m pip install -r docs/requirements.txt
+          python -m pip install --no-cache-dir --upgrade pip
+          python -m pip install --no-cache-dir -e ".[all_extras]"
+          python -m pip install --no-cache-dir -r docs/requirements.txt
 
       - name: Show dependencies
         run: python -m pip list
