--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -124,7 +124,7 @@ jobs:
           python-version: "3.11"
 
       - name: install pre-commit
-        run: python3 -m pip install pre-commit
+        run: python3 -m pip install --no-cache-dir pre-commit
 
       - name: Checkout code
         uses: actions/checkout@v5
@@ -175,8 +175,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install build
+          python -m pip install --no-cache-dir --upgrade pip
+          python -m pip install --no-cache-dir build
 
           make install-no-extras-for-test
 
@@ -213,8 +213,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install build
+          python -m pip install --no-cache-dir --upgrade pip
+          python -m pip install --no-cache-dir build
 
           make install-all-extras-for-test
 
@@ -246,8 +246,8 @@ jobs:
 
       - name: Install dependencies for scikit-learn ${{ matrix.sklearn-version }}
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install .[all_extras,test] scikit-learn==${{ matrix.sklearn-version }}.*
+          python -m pip install --no-cache-dir --upgrade pip
+          python -m pip install --no-cache-dir .[all_extras,test] scikit-learn==${{ matrix.sklearn-version }}.*
 
       - name: Show dependencies
         run: python -m pip list
@@ -271,8 +271,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install .[test]
+          python -m pip install --no-cache-dir --upgrade pip
+          python -m pip install --no-cache-dir .[test]
 
       - name: Run doctests
         run: |
@@ -298,8 +298,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install .[test]
+          python -m pip install --no-cache-dir --upgrade pip
+          python -m pip install --no-cache-dir .[test]
 
       - name: Run core tests
         run: |
@@ -322,8 +322,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install .[all_extras,test]
+          python -m pip install --no-cache-dir --upgrade pip
+          python -m pip install --no-cache-dir .[all_extras,test]
 
       - name: Run sklearn integration tests
         run: |
@@ -346,8 +346,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install .[sktime-integration,test]
+          python -m pip install --no-cache-dir --upgrade pip
+          python -m pip install --no-cache-dir .[sktime-integration,test]
 
       - name: Run sktime integration tests
         run: |
@@ -370,8 +370,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install .[sktime-integration,test]
+          python -m pip install --no-cache-dir --upgrade pip
+          python -m pip install --no-cache-dir .[sktime-integration,test]
 
       - name: Run skpro integration tests
         run: |
@@ -394,8 +394,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install .[test,test_parallel_backends]
+          python -m pip install --no-cache-dir --upgrade pip
+          python -m pip install --no-cache-dir .[test,test_parallel_backends]
 
       - name: Run utils tests
         run: |
@@ -446,8 +446,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install .[all_extras,test,test_parallel_backends]
+          python -m pip install --no-cache-dir --upgrade pip
+          python -m pip install --no-cache-dir .[all_extras,test,test_parallel_backends]
 
       - name: Run tests with coverage
         run: |
@@ -499,8 +499,8 @@ jobs:
       - name: Install dependencies
         if: steps.check-examples.outputs.examples_changed == 'true'
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install build
+          python -m pip install --no-cache-dir --upgrade pip
+          python -m pip install --no-cache-dir build
           make install-all-extras-for-test
 
       - name: Show dependencies
